--- a/src/view/index.html
+++ b/src/view/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <%= require('html-loader!./layout/html-head.html')  %>
-<body>
-	webpack-
-	<script type="text/javascript" src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-</body>
+  <head>
+  	<%= require('html-loader!./layout/head-common.html')  %>
+  	<title></title>
+  </head>
+  <body>
+  	<%= require('html-loader!./layout/nav.html')  %>
+  	<%= require('html-loader!./layout/header.html')  %>
+  	<div class="page-wrap w">
+  		<%= require('html-loader!./layout/nav-side.html')  %>
+  		<div class="content with-nav">test</div>
+  	</div>
+	<%= require('html-loader!./layout/footer.html')  %>
+  </body>
 </html>
