--- a/src/view/result.html
+++ b/src/view/result.html
@@ -24,8 +24,14 @@
         <div class="result-con cart-add-success">
             <h1 class="result-title">您的商品已成功加入购物车！</h1>
             <div class="result-content">
-                <a class="link" href="./index.html">继续购物</a>
+                <a class="link" href="./index.html">回到首页</a>
                 <a class="link" href="./cart.html">去购物车查看</a>
+            </div>
+        </div>
+        <div class="result-con payment-success">
+            <h1 class="result-title">支付成功！</h1>
+            <div class="result-content">
+                <a class="link" href="./index.html">回到首页</a>
             </div>
         </div>
         <div class="result-con default-success">
